# bunnysync

./: Cargo.toml  Dockerfile  LICENSE.md  README.md  mise.toml
.github/workflows/: build_release_binaries.yml  deploy_docs.yml  lint_fmt.yml  release_crate.yml  tests.yml
docs/: .gitignore  book.toml
docs/src/: SUMMARY.md  bunnycdn.md  introduction.md  why.md
docs/theme/: head.hbs
src/: api.rs  cli.rs  local_path.rs  main.rs  planning.rs
