[package]
name = "bunnysync"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = [
    "Robin Kåveland <robin@kaveland.no>"
]
description = "Sync static files to BunnyCDN"
homepage = "https://github.com/kaaveland/bunnysync"
repository = "https://github.com/kaaveland/bunnysync.git"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive"] }
clap_complete = "4.5.47"
crossbeam = "0.8.4"
fxhash = "0.2.1"
hex = "0.4.3"
infer = "0.19.0"
num_cpus = "1.16.0"
reqwest = { version = "0.12.15", features = ["blocking", "json", "rustls-tls"], default-features = false}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
urlencoding = "2.1.3"

